fixed citationSaver layout on mobile [ closes https://github.com/arquivo/pwa-technologies/issues/1324 ]

--- a/public/css/styles-citation-saver.css
+++ b/public/css/styles-citation-saver.css
@@ -140,6 +140,8 @@ div.citation-saver-input-selection {
 
 #citation-saver-main{
     margin-bottom: 50px; 
+    margin-left: 5px;
+    margin-right: 5px;
 }
 #citation-saver-main h4 {
     display: inline;
@@ -197,11 +199,19 @@ section#citation-saver-modal form button {
     padding: 0 11px 0 0;
     line-height: 42px;
 }
+
 #input-file-button {
     line-height: 29px;
 }
+
 #input-file-text {
     color: gray;
     vertical-align: middle;
     margin-left: 6px;
+}
+
+@media (max-width: 767px) {
+    section#citation-saver-main {
+        margin-top: 50px;
+    }
 }
